client/src/style.css
/*********************************************************************
Minimal CSS Reset
*********************************************************************/

html {
  box-sizing: border-box;
  font-size: 16px;
  background-color: #fffcf7;
}

*,
*:before,
*:after {
  box-sizing: inherit;
}

body,
h1,
h2,
h3,
h4,
h5,
h6,
p,
ol,
ul {
  margin: 0;
  padding: 0;
  font-weight: normal;
  overflow-wrap: break-word;
  hyphens: auto;
}

ol,
ul {
  list-style: none;
}

img {
  max-width: 100%;
  height: auto;
}

a {
  text-decoration: none;
  color: inherit;
}

body {
  font-family: "Work Sans", sans-serif;
  width: 90%;
  margin: 2rem auto 0;
}

h1 {
  margin-bottom: 3.25rem;
}

/*********************************************************************
Main Navigation
*********************************************************************/

header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  border-bottom: 1px solid black;
  margin-bottom: 2rem;
  padding-bottom: 1.5rem;
  width: 100%;
}

.logo {
  font-size: 1.875rem;
  font-weight: 500;
  width: 35%;
}

header nav {
  display: flex;
  flex-direction: column;
  align-items: flex-end;
}

header nav a {
  margin-top: 10px;
}

button.button {
  font-size: 1.25rem;
  font-family: inherit;
  height: 3.625rem;
  border: none;
  background-color: transparent;
  padding: 0;
  cursor: pointer;
}

button.button {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  background-color: #f8deff;
  border: 2px solid #000;
  border-radius: 5px;
  box-shadow: 3px 3px 1px #000;
  min-width: 10ch;
  min-height: 44px;
  padding: 1rem;
}

button.button:focus {
  background-color: #3f3777;
  color: #ffffff;
}

/*********************************************************************
Login/Sign Up Form
*********************************************************************/

.form-wrapper {
  border: 1px solid rgb(0, 0, 0);
  border-radius: 10px;
  /* background-color: #fff1de; */
  width: 100%;
  max-width: 420px;
  margin: 2rem auto;
  padding: 1.875rem 3.25rem;
}

.form-wrapper h1 {
  font-size: 1.875rem;
  font-weight: 500;
  text-align: left;
  margin-bottom: 2rem;
}

.form-wrapper form {
  display: flex;
  flex-direction: column;
  width: 100%;
  /* margin: 0 auto; */
}

.form-wrapper span {
  margin: 6px 0;
  color: red;
}

.form-wrapper form label {
  margin: 8px 0;
  text-align: left;
}

.form-wrapper form input {
  font-family: inherit;
  font-size: max(16px, 1em);
  line-height: 1;
  height: 2.5rem;
  /* margin-bottom: 1rem; */
  padding: 0.25em 0.5em;
  background-color: #fff;
  border: 1px solid #000;
  border-radius: 4px;
}

.form-wrapper button {
  margin-top: 2rem;
}

.cancel-btn {
  border: none;
  background-color: none;
}

.form-wrapper p {
  font-size: 14px;
  text-align: center;
  width: 100%;
  margin: 1rem auto;
}

/*********************************************************************
Login/Sign Up Form
*********************************************************************/

.dashboard-info {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: center;
  font-size: 1.125rem;
  margin: 0 auto 3.25rem;
}

.dashboard-info h1 {
  font-size: 1.875rem;
  font-weight: 500;
  margin-bottom: 10px;
}

.dashboard-info div {
  margin-bottom: 2rem;
  max-width: 520px;
}

.dashboard-info a {
  font-size: 1.25rem;
}

.link-button {
  background-color: #f8deff;
  border: 2px solid #000;
  border-radius: 5px;
  box-shadow: 3px 3px 1px #000;
  width: max-content;
  height: max-content;
  padding: 1rem;
}

.link-button:focus {
  background-color: #3f3777;
  color: #fffcf7;
}

.goal-container {
  display: grid;
  gap: 2rem;
  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
  margin-bottom: 4rem;
}

.goal {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: 300px;
  font-size: 1.5rem;
  border: 2px solid #000000;
  padding: 1.5rem;
  background-color: #fffcde;
}

/* .goal:nth-of-type(4n-3) {
  background-color: #def2ff;
}
.goal:nth-of-type(4n-2) {
  background-color: #ffdede;
}
.goal:nth-of-type(4n-1) {
  background-color: #f8deff;
}
.goal:nth-of-type(4n) {
  background-color: #fffcde;
} */

.goal h2 {
  font-size: 1.5rem;
  /* text-decoration: underline; */
}

.goal-category {
  font-size: 1rem;
  font-weight: 700;
  text-transform: uppercase;
  margin-top: 3.875rem;
}

/*********************************************************************
Goal Form
*********************************************************************/

.goal-form {
  display: grid;
  grid-gap: 4rem;
  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
  max-width: 112.5rem;
  margin: 0 auto 4rem;
}
.goal-form h1 {
  font-size: 1.875rem;
  font-weight: 500;
  margin-bottom: 2rem;
}

.goal-guide {
  border: 2px solid #000000;
  background-color: #fff1de;
  width: 100%;
  max-width: 37.5rem;
  height: fit-content;
  margin: 0 auto;
  padding: 2rem;
}

.goal-guide h2 {
  font-size: 1.5rem;
  font-weight: 500;
  margin-bottom: 2rem;
}

.guide-item:last-of-type {
  margin-bottom: 1rem;
}

.guide-item:not(:last-of-type) {
  margin-bottom: 1rem;
}

.guide-item h3 {
  font-size: 1.125rem;
  font-weight: 500;
  margin-bottom: 8px;
}

.goal-form form {
  width: 100%;
  max-width: 37.5rem;
  margin: 0 auto;
}

.form-description {
  margin-bottom: 1em;
  font-weight: 600;
  text-decoration: underline;
}

.markdown-note {
  color: #434343;
  font-size: 14px;
  margin-bottom: 8px;
  text-decoration: none;
}

.form-textfields {
  display: grid;
  gap: 2rem;
  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
  margin-bottom: 2rem;
}

.form-textfields p {
  display: flex;
  flex-direction: column;
}

.form-textfields p label,
.form-select label {
  margin-bottom: 10px;
}

.form-textfields label {
  font-weight: 500;
}

.form-textfields textarea {
  font-family: inherit;
  font-size: max(16px, 1em);
  margin-bottom: 1rem;
  padding: 0.25em 0.5em;
  background-color: #fff;
  border: 1px solid rgba(0, 0, 0, 0.475);
  border-radius: 4px;
}

.form-select {
  display: flex;
  flex-direction: column;
  margin-bottom: 2rem;
}

.form-select select {
  background-color: transparent;
  border: none;
  padding: 0 1em 0 0;
  margin: 0;
  width: 100%;
  font-family: inherit;
  font-size: inherit;
  cursor: inherit;
  line-height: inherit;
}

.form-select select {
  width: max-content;
  border: 1px solid rgb(74, 74, 74);
  border-radius: 0.25em;
  padding: 0.25em 0.5em;
  cursor: pointer;
  line-height: 1.1;
  background-color: #fff;
}

.form-buttons {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 200px;
}

.validation-errors {
  color: red;
  margin-bottom: 1em;
}

.validation-errors li:not(:last-of-type) {
  margin-bottom: 8px;
}

/*********************************************************************
Goal Detail
*********************************************************************/

.detail-nav {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  width: 100%;
  margin-bottom: 2rem;
}

.detail-nav div {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  width: 200px;
}

.detail-nav a,
.detail-nav div a {
  font-size: 1.125rem;
  margin-bottom: 10px;
}

.goal-details {
  display: flex;
  flex-wrap: wrap;
  margin-bottom: 4rem;
}

.goal-details h1 {
  font-size: 1.5rem;
  font-weight: 500;
  margin-bottom: 1rem;
  width: 100%;
}

.goal-text {
  display: flex;
  flex-direction: column;
  border-top: 2px solid black;
  border-bottom: 2px solid black;
  width: 100%;
  margin-bottom: 4rem;
  padding: 2rem 0;
}

.goal-text p {
  font-size: clamp(1rem, 4vw + 1rem, 2.625rem);
}

.details-wrapper {
  display: grid;
  gap: 1.5rem;
  grid-template-columns: repeat(auto-fit, minmax(245px, 1fr));
  width: 100%;
}

.detail {
  display: flex;
  flex-direction: column;
  border: 1px solid #000000;
  font-size: 1.125rem;
  background-color: #fbfdff;
  min-height: 200px;
  padding: 2rem 1.5rem;
}

.detail h2 {
  font-size: 1.5rem;
  font-weight: 500;
  margin-bottom: 8px;
}

.quote-wrapper {
  font-family: "Fredoka One", cursive;
  padding: 2rem;
  margin-bottom: 2rem;
}

.quote-wrapper h2 {
  text-transform: uppercase;
  font-size: clamp(1.5rem, 4vw + 1rem, 3rem);
  text-align: center;
  color: rgb(253, 209, 31);
  text-shadow: 3px 2px 1px #1e1e1e;
  margin-bottom: 1rem;
}

.quote {
  color: #fff;
  font-size: clamp(1rem, 2vw + 1rem, 1.8rem);
  background-color: black;
  text-align: center;
  max-width: 680px;
  margin: 0 auto;
  padding: 2rem;
}

/*********************************************************************
Delete Goal
*********************************************************************/

.delete-form {
  margin-top: 2rem;
}

.delete-form a {
  margin-left: 1.5rem;
}

@media screen and (-ms-high-contrast: active) {
  .button {
    border: 2px solid currentcolor;
  }
}

@media screen and (min-width: 620px) {
  .detail-nav {
    flex-direction: row;
  }

  .detail-nav div {
    flex-direction: row;
  }
}

@media screen and (min-width: 1024px) {
  .goal {
    height: 280px;
  }
}

